# bonekit-c

./: .gitignore  LICENSE  README.md  configure.ac
scripts/: autogen.sh  clean.sh  version.sh
test/: Makefile.am  test_helper.h
test/unit/: adxl345_test.c  beaglebone_test.c  pin_test.c
